--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -42,21 +42,41 @@
   }
   
   .home-container {
+    background-color: #fff;
     position: relative;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 75%;
     height: 130px;
-    border-radius: 40px;
+    border-radius: 50px;
     overflow: hidden;
+    
   }
   
-  .home-paper {
-    padding-left: 40px;
-    padding-top: 50px;
-    margin-top: 0px;
-    width: 100%;
-    height: 100%;
+  .content-container{
+    padding-top: 0px;
+    background-color: #DDE6ED;
+    width: 70%;
+    margin: -40px auto 50px;
+    
+    height: auto;
+    border: 0px solid;
+    display: block;
+    justify-content: center;
+    align-items: center;
   }
+  .content-1{
+    margin: 16px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: #DDE6ED;
+    width: 98%;
+    height: auto;
+    border: 0px solid;
+  }
+  
+  
+  
  
  
