--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -5,9 +5,9 @@
     border-radius: 0px 0px 60px 60px;
     justify-content: center;
     align-items: center;
-    font-size: 15px;
+    font-size: 17xpx;
     font-weight: bold;
-    position: sticky;
+    position: relative;
     top: 0;
     
     
@@ -26,7 +26,7 @@
   .navbar-logo {
     color: #fff;
     justify-self: start;
-    margin-left: 20px;
+    
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
@@ -52,7 +52,7 @@
   }
   
   .nav-item {
-    height: 80px;
+    height: 50px;
   }
   
   .nav-links {
@@ -162,4 +162,24 @@
       color: #242424;
       transition: 250ms;
     }
+  }
+  .user-profile-image {
+    width: 40px; /* Adjust the size as needed */
+    height: 40px;
+    border-radius: 50%;
+  }
+  
+  .profile-dropdown-content {
+    display: none;
+    padding: 5px;
+    position: absolute;
+    background-color: #DDE6ED;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 2px 2px 10px 10px;
+    z-index: 999;
+  }
+  
+  .profile-dropdown:hover .profile-dropdown-content {
+    display: block;
   }
