--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -42,7 +42,7 @@
   }
   
   .home-container {
-    padding-top: 70px;
+    padding-top: 20px;
     background-color: #fff;
     position: relative;
     left: 50%;
@@ -50,12 +50,20 @@
     width: 75%;
     height: 130px;
     border-radius: 30px;
+    display: block;
   }
   .home-buttons{
-    
     width: 100%;
     display: flex;
     border: 0px solid;
+    height: 40px;
+  }
+  .button-labels{
+
+    margin-bottom: 1px;
+    width: 100%;
+    display: flex;
+    border: 3px solid;
     height: 40px;
   }
   
