--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -8,11 +8,9 @@
     font-size: 17xpx;
     font-weight: bold;
     position: relative;
-    top: 0;
-    
-    
+    top: 0; 
   }
-  
+
   .navbar-container {
     padding-top: 50px;
     background-color: #27374D ;
@@ -171,17 +169,23 @@
   }
   
   .profile-dropdown-content {
-    display: none;
+    display: block;
+    font-weight: normal;
     margin-top: 10px;
-    padding: 7px;
+    margin-left: -20px;
+    padding: 10px;
     position: absolute;
-    background-color: #DDE6ED;
-    min-width: 120px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 2px 2px 10px 10px;
+    background-color: #27374D;
+    min-width: 100px;
+    color: white;
+    box-shadow: 3px 3px 3px 3px rgba(.3, 1, 0, .3);
+    border-radius: 3px 3px 3px 3px;
     z-index: 999;
   }
   
   .profile-dropdown:hover .profile-dropdown-content {
     display: block;
+    color: white;
+    margin-left: -20px;
+    padding: 10px;
   }
