--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -72,7 +72,7 @@
     padding-top: 0px;
     background-color: #DDE6ED;
     width: 75%;
-    margin: -40px auto 50px;
+    margin: -35px auto;
     height: auto;
     border: 0px solid;
     display: block;
@@ -87,7 +87,7 @@
     background-color: #DDE6ED;
     width: 100%;
     height: 100%;
-    padding: 10px;
+    padding-bottom: 20px;
     border: 0px solid;
   }
   
