--- a/src/Css/PetProfile.css
+++ b/src/Css/PetProfile.css
@@ -1,12 +1,12 @@
 
 .Pethome-container {
-    background-color: #e14343;
+    /* background-color: #e14343; */
     position: relative;
-    transform: translate(-50%, -12%);
+    transform: translate(-50%, -8%);
     left: 50%;
-    width: 70%;
+    width: 75%;
     height: 560px;
-    border: 5px solid;
+    border: 0px solid;
     display: flex;
     align-items: center;
     
@@ -24,8 +24,7 @@
 .picture{
     background-color: #322e2e;
     position: relative;
-    margin-right: 20px;
-    border-radius: 30px;
+    border-radius: 25px;
     width: 100%;
     height: 100%;
     border: 0px solid;
