--- a/src/Css/signup.css
+++ b/src/Css/signup.css
@@ -26,3 +26,8 @@
     display: inline;
     font-family: 'Josefin Sans', sans-serif;
    }
+
+    .eye-icon {
+    width: 30px;
+    height: 30px;
+  }
