--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -69,27 +69,17 @@
   }
   
   .content-container{
-    padding-top: 0px;
+    margin-top: -35px;
     background-color: #DDE6ED;
-    width: 75%;
-    margin: -35px auto;
-    height: auto;
+    margin-left: 10px;
+    width: 100%;
+    height: 100%;
     border: 0px solid;
     display: block;
     justify-content: center;
     align-items: center;
   }
-  .content-1{
-    margin-left: 10px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    background-color: #DDE6ED;
-    width: 100%;
-    height: 100%;
-    padding-bottom: 20px;
-    border: 0px solid;
-  }
+  
   
   
   
