--- a/src/Css/PetProfile.css
+++ b/src/Css/PetProfile.css
@@ -4,8 +4,8 @@
     position: relative;
     transform: translate(-50%, -8%);
     left: 50%;
-    width: 75%;
-    height: 560px;
+    width: 80%;
+    height: 545px;
     border: 0px solid;
     display: flex;
     align-items: center;
@@ -34,39 +34,11 @@
   .Petcontent2-container { 
     background-color: #f8f8f8;
     position: relative;
-    padding: 30px;
+    padding: 30px 0;
+    padding-left: 60px;
+    padding-right: 30px;
     border-radius: 30px;
-    width: 45%;
+    width: 30%;
     height: 100%;
     border: 0px solid;
   }
-
-  /* PetProfile.css */
-.Pet-Labels {
-  width: 100%;
-  height: 100%;
-  font-family: 'Josefin Sans', sans-serif;
-  
-}
-
-.Pet-Labels h1 {
-  font-size: 35px;
-  margin-bottom: 5px;
-}
-
-.Pet-Labels h3 {
-  color: #828282;
-  font-size: 20px;
-  margin-top: 20px;
-}
-
-.Pet-Labels p {
-  font-size: 16px;
-  margin-bottom: 20px;
-}
-
-.Pet-Labels h4 {
-  font-size: 14px;
-  padding-bottom: 25px; /* Add padding here */
-}
-/* Add more styles as needed */
