--- a/src/Css/UserProfile.css
+++ b/src/Css/UserProfile.css
@@ -1,56 +1,94 @@
-.ProfilePaper {
-    width: 1199px;
-    height: 620px;
-    margin: 0 auto;
-    display: flex;
-    border-radius: 20px;
-  }
-  
-  .ProfileInfoContainer {
-    background: #27374D;
-    border-radius: 20px;
-    padding: 20px;
-    margin-left: 20px;
-    font-family: 'Josefin Sans', sans-serif;
-    color: #FFFFFF;
-    width: 620px;
-    height: 620px;
-    box-sizing: border-box;
-  }
-  
-  .ProfileInfo {
-    margin-top: 20px;
-  }
-  
-  .ProfileImageContainer {
-    margin-right: 20px;
-  }
-  
-  .ProfileImage {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 0 auto;
-    display: block;
-  }
-  
-  .EditableListItem {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .EditableListItemInput {
-    width: 150px;
-  }
-  
-  .EditProfileButtonContainer {
-    margin-top: 20px;
-  }
-  
-  .EditProfileButton {
-    color: #DDE6ED;
-    background-color: #27374D;
-    font-family: 'Josefin Sans', sans-serif;
-    margin-right: 20px;
-  }
+/* UserProfile.css */
+.profile-container {
+  width: 100%;
+  max-width: 1199px;
+  height: 650px;
+  margin: 20px auto 0;
+  display: flex;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #FFFFFF;
+}
+
+
+.box {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-column {
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-image {
+  width: 350px;
+  height: 350px;
+  border-radius: 200px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  align-self: center;
+}
+
+.edit-profile-btn {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #27374D;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.grid-container {
+  width: 100%;
+}
+
+.info-column {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  font-size: 20px;
+}
+
+.personal-info {
+  margin-top: 20px;
+  color: #FFFFFF;
+}
+
+.info-item {
+  margin-bottom: 40px; /* Add margin between personal-info items */
+  font-size: 28px;
+}
+
+.bold-text {
+  font-weight: bold;
+}
+
+.paper-container {
+  background-color: #27374D;
+  padding: 40px;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 44px;  /* Add left margin */
+  margin-right: 44px; /* Add right margin */
+  width: calc(100% - 40px); /* Adjust the width to account for the margins */
+  min-height: 554px;
+  max-width: 800px;
+  flex: 1;
+}
