--- a/src/Css/UserProfileEdit.css
+++ b/src/Css/UserProfileEdit.css
@@ -1,29 +1,29 @@
-/* UserProfileEdit.css */
 .box-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 80%;
-    margin: 20px auto; /* Add margin for top and bottom */
-    background-color: #f0f0f0;
-    border-radius: 20px; /* Add border radius */
-  }
-  
-  .profile-pic,
-  .personal-infos,
-  .password-container {
-    flex: 1;
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin: 10px;
-    border-radius: 10px; /* Add border radius to the inner boxes */
-  }
-  
-  .profile-pic h2,
-  .personal-infos h2,
-  .password-container h2 {
-    color: #333;
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 80%;
+  margin: 20px auto; /* Add margin for top and bottom */
+  background-color: #f0f0f0;
+  border-radius: 20px; /* Add border radius */
+  flex-direction: row; /* Align items horizontally */
+}
+
+.profile-pic,
+.personal-infos,
+.password-container {
+  flex: 1;
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 10px; /* Add border radius to the inner boxes */
+}
+
+.profile-pic h2,
+.personal-infos h2,
+.password-container h2 {
+  color: #333;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
