--- a/src/Css/UserProfile.css
+++ b/src/Css/UserProfile.css
@@ -27,6 +27,7 @@
   height: 250px; /* Adjust as needed */
   border-radius: 50%;
   margin-bottom: 10px;
+  border: 2px solid black;
 }
 
 .edit-profile-btn {
