--- a/src/Css/Gallery.css
+++ b/src/Css/Gallery.css
@@ -1,8 +1,8 @@
 .gallery-container {
-    margin-top: 40px;
+    margin-top:20px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 8px;
+    padding-left: 12px;
     background-color: #DDE6ED;
     width: 50%;
     height: 100%;
@@ -48,5 +48,11 @@
   .Petprofile-Add:hover {
     background-color: #142132;
     color: white;
+  }
+
+  .user-profile-image img {
+    object-fit: cover;
+    border-radius: 50%;
+   
   }
   
