--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -6,22 +6,25 @@ button {
     font-size: 15px;
     font-weight: bold;
     color: #27374D;
-    background-color: #DDE6ED;
+    background-color: whitesmoke;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
 }
 
 button:hover {
-    background-color: #9DB2BF;
+    background-color: #DDE6ED;
     transition: 0.3s;
 }
 
 strong {
     font-size: 69px;
-    color: #DDE6ED;
+    color: whitesmoke;
 }
 
 .slogan {
     margin: 0;
     padding-top: 10px;
     font-size: 23px;
-    color: grey;
+    color: lightgrey;
 }
