--- a/src/Css/UserProfile.css
+++ b/src/Css/UserProfile.css
@@ -28,17 +28,7 @@
   height: 250px; /* Adjust as needed */
   border-radius: 50%;
   margin-bottom: 10px;
-  border: 2px solid black;
-}
-
-.edit-profile-btn {
-  background-color: #27374D;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-size: 16px;
-  border-radius: 10px;
+  border: 3px solid #27374D;
 }
 
 .paper-container {
