--- a/src/Css/Admin.css
+++ b/src/Css/Admin.css
@@ -48,3 +48,17 @@
     color: #DDE6ED;
     transition: background-color 0.3s ease-in-out;
 }
+
+button {
+    background-color: white;
+    font-size: 18px;
+    color: #27374D;
+    border: 2px solid #27374D;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #27374D;
+    color: white;
+    transition: 0.3s;
+}
